<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/include"
        layout="@layout/appbar" />

    <TextView
        android:id="@+id/login_username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/label_username"
        app:layout_constraintBottom_toTopOf="@+id/login_username_tv"
        app:layout_constraintStart_toStartOf="@+id/login_username_tv" />


    <EditText
        android:id="@+id/login_username_tv"
        android:layout_width="275sp"
        android:layout_height="48sp"
        android:layout_marginTop="48dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/hint_login_username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <EditText
        android:id="@+id/login_password_tv"
        android:layout_width="275sp"
        android:layout_height="48sp"
        android:layout_marginTop="40dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/hint_login_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_tv" />

    <TextView
        android:id="@+id/login_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/label_password"
        app:layout_constraintBottom_toTopOf="@+id/login_password_tv"
        app:layout_constraintStart_toStartOf="@+id/login_password_tv" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/inactive"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_tv" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textColor="#808080"
        app:layout_constraintBottom_toTopOf="@+id/goto_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goto_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/secondary"
        android:text="@string/button_register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>